--- a/Pantallas/P_Registro/P_Registro.html
+++ b/Pantallas/P_Registro/P_Registro.html
@@ -60,7 +60,7 @@
                         <hr>
                     </form>
                     <div class="text-center"></div>
-                    <div class="text-center"><a class="small" href="login.html">Ya tienes cuenta? Inicia Sesion!</a></div>
+                    <div class="text-center"><a class="small" href="/InicioSesion">Ya tienes cuenta? Inicia Sesion!</a></div>
                 </div>
             </div>
         </div> 
