--- a/Pantallas/P_Menu_Principal/P_Menu_Principal.html
+++ b/Pantallas/P_Menu_Principal/P_Menu_Principal.html
@@ -16,7 +16,7 @@
         <div class="container-fluid"><a class="navbar-brand" href="#" style="font-family: Shrikhand, serif;font-size: 40px;color: var(--bs-gray-dark);text-shadow: 0px 0px 0px #0753c3;">Hernandez M. Fotografía</a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navcol-1" style="font-family: Shrikhand, serif;font-size: 30px;">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link active" href="#">Productos</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="/Productos">Productos</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">Servicios</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">Galeria</a></li>
                 </ul>
