Flujo de Servicio y Galeria Completado

--- a/Pantallas/P_Menu_Principal/P_Menu_Principal.html
+++ b/Pantallas/P_Menu_Principal/P_Menu_Principal.html
@@ -17,8 +17,8 @@
             <div class="collapse navbar-collapse" id="navcol-1" style="font-family: Shrikhand, serif;font-size: 30px;">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a class="nav-link active" href="/Productos">Productos</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Servicios</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Galeria</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/Servicios">Servicios</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/Galeria">Galeria</a></li>
                 </ul>
             </div>
         </div>
