--- a/Pantallas/P_Galeria/P_Galeria.html
+++ b/Pantallas/P_Galeria/P_Galeria.html
@@ -25,7 +25,7 @@
         </div>
     </nav>
     <div class="container mx-auto">
-        <h1 class="font-poppins text-center text-3xl font-bold pt-24">Filtrar Productos</h1>
+        <h1 class="font-poppins text-center text-3xl font-bold pt-24">Filtrar Galeria</h1>
     </div>
 
     <!-- form -->
@@ -46,7 +46,7 @@
         </div> -->
     </div>
 
-    <script type="module" src="./P_Productos.mjs"></script>
+    <script type="module" src='/Pantallas/P_Galeria/P_Galeria.mjs'></script>
 
 </body>
 </html>
