--- a/Pantallas/P_Servicios/P_Servicios.html
+++ b/Pantallas/P_Servicios/P_Servicios.html
@@ -25,7 +25,7 @@
         </div>
     </nav>
     <div class="container mx-auto">
-        <h1 class="font-poppins text-center text-3xl font-bold pt-24">Filtrar Productos</h1>
+        <h1 class="font-poppins text-center text-3xl font-bold pt-24">Filtrar Servicios</h1>
     </div>
 
     <!-- form -->
@@ -46,7 +46,7 @@
         </div> -->
     </div>
 
-    <script type="module" src="./P_Productos.mjs"></script>
+    <script type="module" src="./P_Servicios.mjs"></script>
 
 </body>
 </html>
