CU Ver Pedidos Completado

--- a/Pantallas/P_Menu_Gerente/P_Menu_Gerente.html
+++ b/Pantallas/P_Menu_Gerente/P_Menu_Gerente.html
@@ -15,13 +15,14 @@
         <div class="container-fluid"><a class="navbar-brand" href="#" style="font-family: Shrikhand, serif;font-size: 40px;color: var(--bs-gray-dark);text-shadow: 0px 0px 0px #0753c3;">Hernandez M. Fotografía</a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navcol-1" style="font-family: Shrikhand, serif;font-size: 30px;">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link active" href="#">Ver Pedidos</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Manejar Inventario</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/VerPedidos">Ver Pedidos</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/ManejarInventario">Manejar Inventario</a></li>
                 </ul>
             </div>
         </div>
     </nav>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+    <script type="module" src="P_Menu_Gerente.mjs"></script>
 </body>
 
 </html>
