--- a/Pantallas/P_Menu_Marketing/P_Menu_Marketing.html
+++ b/Pantallas/P_Menu_Marketing/P_Menu_Marketing.html
@@ -12,15 +12,17 @@
 
 <body style="background-image: url(&quot;assets/img/flowers.jpg&quot;);">
     <nav class="navbar navbar-light navbar-expand-md" style="color: var(--bs-blue);background: url(&quot;assets/img/BgNavBar.jpg&quot;), #ecf0f4;height: 100px;border-bottom: 5px solid var(--bs-dark);">
-        <div class="container-fluid"><a class="navbar-brand" href="#" style="font-family: Shrikhand, serif;font-size: 40px;color: var(--bs-gray-dark);text-shadow: 0px 0px 0px #0753c3;">Hernandez M. Fotografía</a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+        <div class="container-fluid"><a class="navbar-brand" href="/MenuMarketing" style="font-family: Shrikhand, serif;font-size: 40px;color: var(--bs-gray-dark);text-shadow: 0px 0px 0px #0753c3;">Hernandez M. Fotografía</a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navcol-1" style="font-family: Shrikhand, serif;font-size: 30px;">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link active" href="#">Modificar Productos y Servicios</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="/Modificar">Modificar Productos</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="/Modificar">Modificar Servicios</a></li>
                 </ul>
             </div>
         </div>
     </nav>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+    <script src="P_Menu_Marketing.mjs"></script>
 </body>
 
 </html>
