--- a/Pantallas/P_Productos/P_Productos.html
+++ b/Pantallas/P_Productos/P_Productos.html
@@ -33,6 +33,9 @@
         <input type="text" class="placeholder-gray-800 focus:outline-none bg-gray-200 text-gray-800 w-2/4 py-2 px-3 font-poppins rounded-md" id="filterInput" placeholder="Filtrar">        
     </form>
 
+    <button class="border-2 px-8 py-1 bg-yellow-400 border rounded-md " id="btnPagar">Pagar</button>
+    <p id="counter">Productos en Venta: </p>
+
     <!-- product grid -->
     <div class="products grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 pt-12 gap-20">
          <!--  <div class="item justify-self-center">
