--- a/Pantallas/P_Recop_Datos_Servicios/P_Recop_Datos_Servicios.html
+++ b/Pantallas/P_Recop_Datos_Servicios/P_Recop_Datos_Servicios.html
@@ -46,7 +46,7 @@
                 </div>
                 <div class="row form-group">
                     <div class="col-sm-4 label-column"><label class="col-form-label" for="name-input-field">Hora</label></div>
-                    <div class="col-sm-6 input-column"><input type="time" id="hora" name="appt"></div>
+                    <div class="col-sm-6 input-column"><input type="time" id="hora" name="appt" step="900"></div>
                 </div>
                 <div class="row form-group">
                     <div class="col-sm-4 label-column"><label class="col-form-label" for="name-input-field">Teléfono</label></div>
